--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ dotenv = "0.15.0"
 futures = "0.3.31"
 tokio = { version = "1.48.0", features = ["full"] }
 macros = { path = "macros/" }
+bytes = "1.11.0"
